--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Pastimes Antiques
 email: mail@pastimes.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Ithaca's Fun and Affordable Atique Shop, est. 1979
+  Ithaca's Fun and Affordable Antique Shop, est. 1979
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://pastimes.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jgreidy
