--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-small-business.git"
     },
     "dependencies": {
-        "bootstrap": "4.1.1",
-        "jquery": "3.3.1"
+        "bootstrap": ">=4.1.2",
+        "jquery": "3.3.1",
+        "lodash": ">=4.17.5"
     },
     "devDependencies": {
-        "browser-sync": "2.24.5",
-        "gulp": "^3.9.1"
+        "browser-sync": "^2.26.3",
+        "gulp": "^4.0.0"
     }
 }
