--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Pastimes
 email: mail@pastimes.com
 description: >- # this means to ignore newlines until "baseurl:"
   Ithaca's Fun and Affordable Antique Shop, est. 1979
-baseurl: "/pastimes.com" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://pastimes.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jgreidy
 
