--- a/_config.yml
+++ b/_config.yml
@@ -44,3 +44,9 @@ defaults:
       path: "assets/img"
     values:
       image: true
+
+exclude: [ README.md, CHANGELOG.md, docs, example, RUNNING.md,
+categories, posts, sync-server.sh, README-OLD.md, images/original,
+Rakefile, jekyll-theme-so-simple.gemspec, Gemfile, Gemfile.lock,
+package.json, screenshot.png, screenshots.jpg, banner.js,
+sync-events.sh, node_modules ]
