--- a/_config.yml
+++ b/_config.yml
@@ -49,10 +49,16 @@ defaults:
     values:
       image: true
 
+collections:
+  photos:
+    source: photos.csv
+    layout: photos
+    output: true
+
 exclude: [ README.md, CHANGELOG.md, docs, example, RUNNING.md,
 categories, posts, sync-server.sh, README-OLD.md, images/original,
 Rakefile, jekyll-theme-so-simple.gemspec, Gemfile, Gemfile.lock,
 package.json, screenshot.png, screenshots.jpg, banner.js,
-sync-events.sh, node_modules, package-lock.json, about, jekyll ]
+sync-events.sh, node_modules, package-lock.json, jekyll ]
 
 include: ['index.php']
