--- a/_config.yml
+++ b/_config.yml
@@ -52,13 +52,14 @@ defaults:
 collections:
   photos:
     source: photos.csv
-    layout: photos
+    layout: bg-photos
     output: true
 
 exclude: [ README.md, CHANGELOG.md, docs, example, RUNNING.md,
 categories, posts, sync-server.sh, README-OLD.md, images/original,
 Rakefile, jekyll-theme-so-simple.gemspec, Gemfile, Gemfile.lock,
 package.json, screenshot.png, screenshots.jpg, banner.js,
-sync-events.sh, node_modules, package-lock.json, jekyll, sendetail.php ]
+sync-events.sh, node_modules, package-lock.json, jekyll, sendetail.php,
+LICENSE, test.html ]
 
-include: ['index.php']
+include: ['index.php' ]
