--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-small-business.git"
     },
     "dependencies": {
-        "bootstrap": ">=4.1.2",
+        "bootstrap": "^4.3.1",
         "jquery": "3.3.1",
-        "lodash": ">=4.17.5"
+        "lodash": ">=4.17.5",
+        "popper.js": "^1.14.7"
     },
     "devDependencies": {
         "browser-sync": "^2.26.3",
