--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
         "bootstrap": "^4.3.1",
         "jquery": ">=3.4.0",
         "lodash": ">=4.17.5",
-        "popper.js": "^1.15.0"
+        "popper.js": "^1.15.0",
+        "axios": ">=0.19.0"
     },
     "devDependencies": {
         "browser-sync": "^2.26.5",
-        "gulp": "^4.0.1"
+        "gulp": "^4.0.2"
     }
 }
