--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Pastimes Antiques
 email: mail@pastimes.com
 description: >- # this means to ignore newlines until "baseurl:"
   Ithaca's Fun and Affordable Antique Shop, est. 1979
-baseurl: "/~pastimes" # the subpath of your site, e.g. /blog
-url: "http://143.95.228.87" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://pastimes.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jgreidy
 
 # Build settings
