Add redirects to .htaccess permanently
cPanel writes it's rewrite rules into the .htaccess, then this gets blown away on each upload. Add them here and stay away from cPanel Redirects.

--- a/.htaccess
+++ b/.htaccess
@@ -13,3 +13,16 @@ Header set Cache-Control "max-age=2628000, public"
 </filesMatch>
 
 ErrorDocument 404 /404.html
+
+RewriteCond %{HTTP_HOST} ^.*$
+RewriteRule ^index\.php$ "http\:\/\/pastimes\.com\/index\.html" [R=301,L]
+RewriteRule ^about_us\.php$ "http\:\/\/pastimes\.com\/index\.html" [R=301,L]
+RewriteRule ^buy_sell\.php$ "http\:\/\/pastimes\.com\/index\.html" [R=301,L]
+RewriteRule ^contact_us\.php$ "http\:\/\/pastimes\.com\/index\.html" [R=301,L]
+RewriteRule ^fb-button\.php$ "http\:\/\/pastimes\.com\/index\.html" [R=301,L]
+RewriteRule ^footer\.php$ "http\:\/\/pastimes\.com\/index\.html" [R=301,L]
+RewriteRule ^header\.php$ "http\:\/\/pastimes\.com\/index\.html" [R=301,L]
+RewriteRule ^history\.php$ "http\:\/\/pastimes\.com\/index\.html" [R=301,L]
+RewriteRule ^links\.php$ "http\:\/\/pastimes\.com\/index\.html" [R=301,L]
+RewriteRule ^sendetail\.php$ "http\:\/\/pastimes\.com\/index\.html" [R=301,L]
+RewriteRule ^services\.php$ "http\:\/\/pastimes\.com\/index\.html" [R=301,L]
